k8_manifests/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mysql
  namespace: nagp

spec:
  serviceName: mysql-headless

  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:

      - name: mysql

        image: mysql:8.0

        ports:
        - containerPort: 3306

        volumeMounts:

        - name: mysql-storage
          mountPath: /var/lib/mysql

        - name: mysql-init-script
          mountPath: /docker-entrypoint-initdb.d

        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

      volumes:

      - name: mysql-init-script
        configMap:
          name: mysql-init-script

  volumeClaimTemplates:

  - metadata:
      name: mysql-storage

    spec:
      accessModes:
      - ReadWriteOnce

      storageClassName: gp3

      resources:
        requests:
          storage: 5Gi
