k8_manifests/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-api-service
  namespace: nagp

spec:
  selector:
    app: employee-api

  ports:
  - port: 80
    targetPort: 5000

  type: ClusterIP
