k8_manifests/mysql-headless.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql-headless
  namespace: nagp

spec:
  clusterIP: None

  selector:
    app: mysql

  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
