k8_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-api-ingress
  namespace: nagp

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health

spec:
  ingressClassName: alb

  rules:
  - http:

      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: employee-api-service

            port:
              number: 80
