k8_manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: mysql-network-policy
  namespace: nagp

spec:

  podSelector:
    matchLabels:
      app: mysql

  policyTypes:
  - Ingress

  ingress:
  - from:

    - podSelector:
        matchLabels:
          app: employee-api

    ports:
    - protocol: TCP
      port: 3306
